UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/FieldAssignment__c.object-meta.xml
<CustomObject>
    <label>Field Assignment</label>
    <nameField>
        <displayFormat>Assignment{0000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>