UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Field Assignments</relationshipLabel>
    <relationshipName>Field_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>