UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/fields/Backup_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Backup_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backup  Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Assignments1_del</relationshipName>
    <type>Lookup</type>
</CustomField>