UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <formula>CASE(WorkGroupId__r.Field__c,
  &quot;Network_Project_Specialist__c&quot;, &quot;Network Project Specialist&quot;,
  &quot;Order_Provisioner__c&quot;, &quot;Order Provisioner&quot;,
  &quot;Implementor_PM__c&quot;, &quot;Project Manager&quot;, 
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field</label>
    <type>Text</type>
</CustomField>