UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/fields/Out_Of_Office_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Office_End_Date__c</fullName>
    <label>Out Of Office End Date</label>
    <type>DateTime</type>
</CustomField>