UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/fields/OutOfOffice__c.field-meta.xml
<CustomField>
    <fullName>OutOfOffice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Office?</label>
    <type>Checkbox</type>
</CustomField>