UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/fields/ProcessedRecord__c.field-meta.xml
<CustomField>
    <fullName>ProcessedRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed Record?</label>
    <type>Checkbox</type>
</CustomField>