UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/fields/UniqueCustomerAssignment__c.field-meta.xml
<CustomField>
    <fullName>UniqueCustomerAssignment__c</fullName>
    <externalId>true</externalId>
    <label>UniqueCustomerAssignment</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>