UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>