UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/fields/WorkGroupId__c.field-meta.xml
<CustomField>
    <fullName>WorkGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Group</label>
    <referenceTo>WorkGroup__c</referenceTo>
    <relationshipLabel>Field Assignments</relationshipLabel>
    <relationshipName>Field_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>