UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <label>Customer</label>
</RecordType>