UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/recordTypes/State.recordType-meta.xml
<RecordType>
    <fullName>State</fullName>
    <active>true</active>
    <label>State</label>
</RecordType>