UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/validationRules/Assignee_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignee_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>WorkGroupId__r.Name != &apos;Customer&apos; &amp;&amp; UserId__c == null</errorConditionFormula>
    <errorMessage>An assignee is required</errorMessage>
</ValidationRule>