UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/validationRules/Customer_is_required_if_Primary_is_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_is_required_if_Primary_is_check</fullName>
    <active>true</active>
    <description>SDDD-4526	01103949 - NCM Order Assignment Automation</description>
    <errorConditionFormula>AND( AccountId__c = null , Primary__c  = True  )</errorConditionFormula>
    <errorDisplayField>AccountId__c</errorDisplayField>
    <errorMessage>Customer is required if Primary is checked</errorMessage>
</ValidationRule>