UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/validationRules/Customer_WorkGroup.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_WorkGroup</fullName>
    <active>true</active>
    <errorConditionFormula>WorkGroupId__r.Name = &apos;Customer&apos; &amp;&amp; AccountId__c == null &amp;&amp; RecordType.Name != &apos;NCM&apos;</errorConditionFormula>
    <errorMessage>Customer assignments must be linked to a customer</errorMessage>
</ValidationRule>