UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/validationRules/Customer_Workgroup_Account_Link.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Workgroup_Account_Link</fullName>
    <active>true</active>
    <errorConditionFormula>WorkGroupId__r.Name != &apos;Customer&apos; &amp;&amp; AccountId__c != null &amp;&amp; RecordType.Name != &apos;NCM&apos;</errorConditionFormula>
    <errorMessage>Only Customer workgroups can be linked to a customer</errorMessage>
</ValidationRule>