UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/validationRules/State_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>State_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(States__c) &amp;&amp; WorkGroupId__r.Name == &apos;Products&apos;</errorConditionFormula>
    <errorMessage>A state is required</errorMessage>
</ValidationRule>