UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>WorkGroupId__c</columns>
    <columns>UserId__c</columns>
    <columns>Primary__c</columns>
    <columns>AccountId__c</columns>
    <columns>States__c</columns>
    <columns>OutOfOffice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>