UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/listViews/Complex.listView-meta.xml
<ListView>
    <fullName>Complex</fullName>
    <columns>NAME</columns>
    <columns>Field__c</columns>
    <columns>UserId__c</columns>
    <columns>Primary__c</columns>
    <columns>States__c</columns>
    <columns>OutOfOffice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WorkGroupId__c</field>
        <operation>equals</operation>
        <value>Complex</value>
    </filters>
    <label>Complex</label>
</ListView>