UCF-APR2.4/ftr main/force-app/main/default/objects/FieldAssignment__c/listViews/Managed_Services.listView-meta.xml
<ListView>
    <fullName>Managed_Services</fullName>
    <columns>NAME</columns>
    <columns>WorkGroupId__c</columns>
    <columns>UserId__c</columns>
    <columns>Primary__c</columns>
    <columns>AccountId__c</columns>
    <columns>States__c</columns>
    <columns>OutOfOffice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WorkGroupId__c</field>
        <operation>equals</operation>
        <value>Managed Services</value>
    </filters>
    <label>Managed Services</label>
</ListView>